--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: project_tubes
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -34,6 +34,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   carousel_slider: ^5.0.0
+  flutter_local_notifications: ^17.2.4
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +53,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -59,21 +60,21 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/images/login-image.png
-  - assets/images/background-image.png
-  - assets/images/close.png
-  - assets/images/carousel1.png
-  - assets/images/carousel2.png
-  - assets/images/carousel3.png
-  - assets/images/icon-appbar.jpg
-  - assets/images/healthy-food.png
-  - assets/images/buah.png
-  - assets/images/sayur.png
-  - assets/images/dada-ayam.png
-  - assets/images/salad.png
-  - assets/images/oats.png
-  - assets/images/locker_room.png
-  - assets/images/bathroom.png
+    - assets/images/login-image.png
+    - assets/images/background-image.png
+    - assets/images/close.png
+    - assets/images/carousel1.png
+    - assets/images/carousel2.png
+    - assets/images/carousel3.png
+    - assets/images/icon-appbar.jpg
+    - assets/images/healthy-food.png
+    - assets/images/buah.png
+    - assets/images/sayur.png
+    - assets/images/dada-ayam.png
+    - assets/images/salad.png
+    - assets/images/oats.png
+    - assets/images/locker_room.png
+    - assets/images/bathroom.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -89,10 +90,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-  - family: Montserrat
-    fonts:
-    - asset: assets/fonts/Montserrat-Black.ttf
-    - asset: assets/fonts/Montserrat-Bold.ttf
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Black.ttf
+        - asset: assets/fonts/Montserrat-Bold.ttf
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
@@ -105,4 +106,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-
